exercise5.05/manifests/knative-pong-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: pong-knative
  namespace: app
spec:
  template:
    metadata: 
      name: pong-knative-app-v2
    spec:
      containers:
        - image: anttitmh/pong:latest
          env:
            - name: SERVER_PORT
              value: "8080"
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: secrets
                  key: POSTGRES_PASSWORD
